Moved ODP URI to env

--- a/backend/models/models.ipynb
+++ b/backend/models/models.ipynb
@@ -18,7 +18,7 @@
     "from pymongo import MongoClient\n",
     "\n",
     "try:\n",
-    "    client = MongoClient('mongodb+srv://nakshsonigara:3zdYTj1F4LQZExn2@nacluster.ubw35.mongodb.net/?retryWrites=true&w=majority&appName=NaCluster')\n",
+    "    client = MongoClient('***')\n",
     "    db =client['CRM']\n",
     "    print(\"Connected to MongoDB\")\n",
     "except Exception as e:\n",
