Restricted Mongo db access for security

--- a/backend/models/ETL.ipynb
+++ b/backend/models/ETL.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
     "from pymongo import MongoClient\n",
     "\n",
     "# Step 1: Connect to MongoDB\n",
-    "connection_string = 'mongodb+srv://nakshsonigara:3zdYTj1F4LQZExn2@nacluster.ubw35.mongodb.net/?retryWrites=true&w=majority&appName=NaCluster'\n",
+    "connection_string = ''\n",
     "\n",
     "try:\n",
     "    client = MongoClient(connection_string)\n",
